typo fix withing -> within

--- a/android/assets/jsons/translationsByLanguage/Korean.properties
+++ b/android/assets/jsons/translationsByLanguage/Korean.properties
@@ -26,7 +26,7 @@ Create a trade route!\nConstruct roads between your capital and another city\nOr
  # Requires translation!
 Conquer a city!\nBring an enemy city down to low health > \nEnter the city with a melee unit = 
  # Requires translation!
-Move an air unit!\nSelect an air unit > select another city withing range > \nMove the unit to the other city = 
+Move an air unit!\nSelect an air unit > select another city within range > \nMove the unit to the other city = 
  # Requires translation!
 See your stats breakdown!\nEnter the Overview screen (top right corner) >\nClick on 'Stats' = 
 
