--- a/android/assets/jsons/translationsByLanguage/English.properties
+++ b/android/assets/jsons/translationsByLanguage/English.properties
@@ -26,7 +26,7 @@ Create a trade route!\nConstruct roads between your capital and another city\nOr
  # Requires translation!
 Conquer a city!\nBring an enemy city down to low health > \nEnter the city with a melee unit = 
  # Requires translation!
-Move an air unit!\nSelect an air unit > select another city withing range > \nMove the unit to the other city = 
+Move an air unit!\nSelect an air unit > select another city within range > \nMove the unit to the other city = 
  # Requires translation!
 See your stats breakdown!\nEnter the Overview screen (top right corner) >\nClick on 'Stats' = 
 
@@ -1498,12 +1498,7 @@ Specialist Buildings =
  # Requires translation!
 Specialist Allocation = 
  # Requires translation!
-Specialists = 
-[specialist] slots = [specialist] slots
-Engineer specialist = Engineer specialist
-Merchant specialist = Merchant specialist
-Scientist specialist = Scientist specialist
-Artist specialist = Artist specialist 
+Specialists =
  # Requires translation!
 Food eaten = 
  # Requires translation!
