--- a/android/assets/jsons/translationsByLanguage/template.properties
+++ b/android/assets/jsons/translationsByLanguage/template.properties
@@ -13,7 +13,7 @@ Open the options table!\nClick the menu button (top left) > click 'Options' =
 Construct an improvement!\nConstruct a Worker unit > Move to a Plains or Grassland tile > \n Click 'Create improvement' (above the unit table, bottom left)\n > Choose the farm > \n Leave the worker there until it's finished = 
 Create a trade route!\nConstruct roads between your capital and another city\nOr, automate your worker and let him get to that eventually = 
 Conquer a city!\nBring an enemy city down to low health > \nEnter the city with a melee unit = 
-Move an air unit!\nSelect an air unit > select another city withing range > \nMove the unit to the other city = 
+Move an air unit!\nSelect an air unit > select another city within range > \nMove the unit to the other city = 
 See your stats breakdown!\nEnter the Overview screen (top right corner) >\nClick on 'Stats' = 
 
 Oh no! It looks like something went DISASTROUSLY wrong! This is ABSOLUTELY not supposed to happen! Please send me (yairm210@hotmail.com) an email with the game information (menu -> save game -> copy game info -> paste into email) and I'll try to fix it as fast as I can! = 
