--- a/android/assets/jsons/translationsByLanguage/Japanese.properties
+++ b/android/assets/jsons/translationsByLanguage/Japanese.properties
@@ -308,12 +308,12 @@ Diplomacy = 外交
 War = 戦争
 Peace = 平和
 Declare war = 宣戦布告する
-Declare war on [civName]? = [civName] に宣戦布告しますか？
-[civName] has declared war on us! = [civName] に宣戦布告されました！
-[leaderName] of [nation] = [nation] の [LeaderName]
+Declare war on [civName]? = [civName]に宣戦布告しますか？
+[civName] has declared war on us! = [civName]に宣戦布告されました！
+[leaderName] of [nation] = [nation]の[leaderName]
 You'll pay for this! = 覚えておけ！
 Negotiate Peace = 平和交渉
-Peace with [civName]? = [civName] との平和条約
+Peace with [civName]? = [civName]との平和条約
 Very well. = 結構。
 Farewell. = ごきげんよう。
 Sounds good! = いいですね
@@ -322,17 +322,17 @@ Excellent! = すばらしい！
 How about something else... = 他に何か...
 A pleasure to meet you. = お会いできて光栄です。
 Our relationship:  = 自文明との関係:
-We have encountered the City-State of [name]! = [name] の都市に遭遇しました！
-Declare Friendship ([numberOfTurns] turns) = 友好宣言([numberOfTurns] ターン)
+We have encountered the City-State of [name]! = [name]の都市に遭遇しました！
+Declare Friendship ([numberOfTurns] turns) = 友好宣言([numberOfTurns]ターン)
 May our nations forever remain united! = 私たちの国が永遠に団結し続けますように！
 Indeed! = そうだな。
-Denounce ([numberOfTurns] turns) = 非難([numberOfTurns] ターン)
+Denounce ([numberOfTurns] turns) = 非難([numberOfTurns]ターン)
 We will remember this. = これを覚えている。
 
-[civName] has declared war on [targetCivName]! = [civName] は [targetCivName] に宣戦布告しました！
-[civName] and [targetCivName] have signed the Peace Treaty! = [civName] と [targetCivName] は平和条約に署名しました！
-[civName] and [targetCivName] have signed the Declaration of Friendship! = [civName] と [targetCivName] は有効宣言に署名しました！
-[civName] has denounced [targetCivName]! = [civName]は [targetCivName] を非難しました！
+[civName] has declared war on [targetCivName]! = [civName]は[targetCivName]に宣戦布告しました！
+[civName] and [targetCivName] have signed the Peace Treaty! = [civName]と[targetCivName] は平和条約に署名しました！
+[civName] and [targetCivName] have signed the Declaration of Friendship! = [civName] と[targetCivName] は有効宣言に署名しました！
+[civName] has denounced [targetCivName]! = [civName]は[targetCivName]を非難しました！
 
 Unforgivable = 許されない
 Enemy = 敵
@@ -347,7 +347,7 @@ Ally = 味方
 You declared war on us! = あなたは我々に宣戦布告しました！
 You warmongering ways are unacceptable to us. = あなたの戦争挑発行為は我々に受け入れられません。
 You have captured our cities! = あなたは我々の都市を占領しました！
-We applaud your liberation of our conquered cities! = 
+We applaud your liberation of our conquered cities! = 占領された都市の解放を称賛します！
 Years of peace have strengthened our relations. = 
 Our mutual military struggle brings us closer together. = 
 We have signed a public declaration of friendship = 
