--- a/android/assets/jsons/translationsByLanguage/Japanese.properties
+++ b/android/assets/jsons/translationsByLanguage/Japanese.properties
@@ -314,27 +314,27 @@ Declare war on [civName]? = [civName]に宣戦布告しますか？
 You'll pay for this! = 覚えておけ！
 Negotiate Peace = 平和交渉
 Peace with [civName]? = [civName]との平和条約
-Very well. = 結構。
-Farewell. = ごきげんよう。
-Sounds good! = いいですね
-Not this time. = 今回は見送る。
+Very well. = 結構
+Farewell. = ごきげんよう
+Sounds good! = おうじよう
+Not this time. = 今回は見送る
 Excellent! = すばらしい！
 How about something else... = 他に何か...
-A pleasure to meet you. = お会いできて光栄です。
+A pleasure to meet you. = お会いできて光栄です
 Our relationship:  = 自文明との関係:
 We have encountered the City-State of [name]! = [name]の都市に遭遇しました！
 Declare Friendship ([numberOfTurns] turns) = 友好宣言([numberOfTurns]ターン)
 May our nations forever remain united! = 私たちの国が永遠に団結し続けますように！
-Indeed! = そうだな。
+Indeed! = そうだな
 Denounce ([numberOfTurns] turns) = 非難([numberOfTurns]ターン)
-We will remember this. = これを覚えている。
+We will remember this. = これを覚えている
 
 [civName] has declared war on [targetCivName]! = [civName]は[targetCivName]に宣戦布告しました！
 [civName] and [targetCivName] have signed the Peace Treaty! = [civName]と[targetCivName] は平和条約に署名しました！
-[civName] and [targetCivName] have signed the Declaration of Friendship! = [civName] と[targetCivName] は有効宣言に署名しました！
+[civName] and [targetCivName] have signed the Declaration of Friendship! = [civName] と[targetCivName] は友好宣言に署名しました！
 [civName] has denounced [targetCivName]! = [civName]は[targetCivName]を非難しました！
 
-Unforgivable = 許されない
+Unforgivable = 宿敵
 Enemy = 敵
 Competitor = 競争相手
 Neutral = 中立
@@ -348,27 +348,27 @@ You declared war on us! = あなたは我々に宣戦布告しました！
 You warmongering ways are unacceptable to us. = あなたの戦争挑発行為は我々に受け入れられません。
 You have captured our cities! = あなたは我々の都市を占領しました！
 We applaud your liberation of our conquered cities! = 占領された都市の解放を称賛します！
-Years of peace have strengthened our relations. = 
-Our mutual military struggle brings us closer together. = 
-We have signed a public declaration of friendship = 
-You have declared friendship with our enemies! = 
-You have declared friendship with our allies = 
-Our open borders have brought us closer together. = 
-Your so-called 'friendship' is worth nothing. = 
-You have publicly denounced us! = 
-You have denounced our allies = 
-You have denounced our enemies = 
-You betrayed your promise to not settle cities near us = 
-You fulfilled your promise to stop settling cities near us! = 
-You refused to stop settling cities near us = 
-Your arrogant demands are in bad taste = 
-Your use of nuclear weapons is disgusting! = 
+Years of peace have strengthened our relations. = 長年の平和は我々の関係を強化してきました。
+Our mutual military struggle brings us closer together. = 相互の軍事闘争は、我々をより密接に結び付けます
+We have signed a public declaration of friendship = 友好宣言に署名しました
+You have declared friendship with our enemies! = 敵との友好宣言をしました
+You have declared friendship with our allies = あなたは我々の同盟国との友好宣言をしました
+Our open borders have brought us closer together. = 我々の開かれた境界線は我々をより密接に結びつけました
+Your so-called 'friendship' is worth nothing. = あなたのいわゆる「友好宣言」は何の価値もありません
+You have publicly denounced us! = あなたは我々を公然と非難しました！
+You have denounced our allies = あなたは我々の同盟国を非難しました
+You have denounced our enemies = あなたは我々の敵を非難しました
+You betrayed your promise to not settle cities near us = あなたは我々の近くに都市を建設しないという約束を裏切りました
+You fulfilled your promise to stop settling cities near us! = あなたは我々の近くに都市を建設するのをやめるという約束を果たしました！
+You refused to stop settling cities near us = あなたは我々の近くに都市を建設するのをやめることを拒否しました
+Your arrogant demands are in bad taste = あなたの傲慢な要求は味が悪い
+Your use of nuclear weapons is disgusting! = 核兵器の使用は嫌です！
 
-Demands = 
-Please don't settle new cities near us. = 
-Very well, we shall look for new lands to settle. = 
-We shall do as we please. = 
-We noticed your new city near our borders, despite your promise. This will have....implications. = 
+Demands = 要求
+Please don't settle new cities near us. = 我々の近くに新しい都市を作らないでください
+Very well, we shall look for new lands to settle. = わかりました…我々は問題を解決するために新しい土地を探します
+We shall do as we please. = 我々は好きなようにやる
+We noticed your new city near our borders, despite your promise. This will have....implications. = あなたは約束したにも関わらず、我々の国境近くに新しい都市があることに気付きました。これにはなにか企みがあるのですか？
 
 # City states
 
