--- a/android/assets/jsons/translationsByLanguage/Italian.properties
+++ b/android/assets/jsons/translationsByLanguage/Italian.properties
@@ -821,16 +821,11 @@ Annex city = Annetti città
 Specialist Buildings = Edifici specialisti
 Specialist Allocation = Assegna specialisti
 Specialists = Specialisti
- # Requires translation!
-[specialist] slots = 
- # Requires translation!
-Engineer specialist = 
- # Requires translation!
-Merchant specialist = 
- # Requires translation!
-Scientist specialist = 
- # Requires translation!
-Artist specialist = 
+[specialist] slots = Slot [specialist]
+Engineer specialist = Specialista Ingegnere
+Merchant specialist = Specialista Mercante
+Scientist specialist = Specialista Scienziato
+Artist specialist = Specialista Artista
 Food eaten = Cibo consumato
 Growth bonus = Bonus crescita
 Unassigned population = Popolazione libera
