Initial commit to add resource level functionality

--- a/build.gradle
+++ b/build.gradle
@@ -42,10 +42,10 @@ allprojects {
 
     repositories {
         // Chinese mirrors for quicker loading for chinese devs
-        maven{ url 'https://maven.aliyun.com/repository/jcenter'}
-        maven{ url 'https://maven.aliyun.com/repository/google'}
-        maven{ url 'https://maven.aliyun.com/repository/gradle-plugin'}
-        maven{ url 'https://maven.aliyun.com/repository/public'}
+//        maven{ url 'https://maven.aliyun.com/repository/jcenter'}
+//        maven{ url 'https://maven.aliyun.com/repository/google'}
+//        maven{ url 'https://maven.aliyun.com/repository/gradle-plugin'}
+//        maven{ url 'https://maven.aliyun.com/repository/public'}
         google()
         jcenter()
         mavenLocal()
