--- a/android/assets/jsons/translationsByLanguage/Japanese.properties
+++ b/android/assets/jsons/translationsByLanguage/Japanese.properties
@@ -518,19 +518,19 @@ Golden Ages last 50% longer. During a Golden Age, units receive +1 Movement and 
 
 Polynesia = ポリネシア
 Kamehameha I = カメハメハ
-Can embark and move over Coasts and Oceans immediately. +1 Sight when embarked. +10% Combat Strength bonus if within 2 tiles of a Moai. = 
+Can embark and move over Coasts and Oceans immediately. +1 Sight when embarked. +10% Combat Strength bonus if within 2 tiles of a Moai. = ゲーム開始時から海への進出が可能。乗船時に視界+1。2タイル以内にモアイがある場合に戦闘力+10%
 
-Siam = 
-Ramkhamhaeng = 
-Food and Culture from Friendly City-States are increased by 50% = 
+Siam = シャム
+Ramkhamhaeng = ラームカムヘーン
+Food and Culture from Friendly City-States are increased by 50% = 友好的な都市国家から得られる食料、文化力、信仰力が50%増加する
 
-Songhai = 
-Askia = 
-Receive triple Gold from Barbarian encampments and pillaging Cities. Embarked units can defend themselves. = 
+Songhai = ソンガイ
+Askia = アスキア
+Receive triple Gold from Barbarian encampments and pillaging Cities. Embarked units can defend themselves. = 蛮族の野営地や都市略奪で入手できるゴールドが3倍。乗船したユニットは自衛ができる
 
-Spain = 
-Isabella = 
-100 Gold for discovering a Natural Wonder (bonus enhanced to 500 Gold if first to discover it). Culture, Happiness and tile yields from Natural Wonders doubled. = 
+Spain = スペイン
+Isabella = イザベラ
+100 Gold for discovering a Natural Wonder (bonus enhanced to 500 Gold if first to discover it). Culture, Happiness and tile yields from Natural Wonders doubled. = 自然遺産の発見時にゴールドのボーナスを得る。自然遺産が生み出す文化力、幸福度、タイルの産出量が2倍になる
 
 # New game screen
 
