--- a/android/assets/jsons/translationsByLanguage/Japanese.properties
+++ b/android/assets/jsons/translationsByLanguage/Japanese.properties
@@ -498,7 +498,7 @@ Otto von Bismark = ビスマルク
 
 India = インド
 Gandhi = ガンジー
-Unhappiness from number of Cities doubled, Unhappiness from number of Citizens halved. = 都市の数から生み出される不満度が2倍。人口数から生み出される不眠度が半分になる
+Unhappiness from number of Cities doubled, Unhappiness from number of Citizens halved. = 都市の数から生み出される不満度が2倍。人口数から生み出される不満度が半分になる
 
 The Ottomans = オスマントルコ
 Suleiman I = スレイマン1世
@@ -535,105 +535,105 @@ Isabella = イザベラ
 # New game screen
 
 Uniques = 
-Promotions = 
-Barbarians = 
-Load copied data = 
-Could not load game from clipboard! = 
-Start game! = 
-Map options = 
-Game options = 
-Map type = 
-Generated = 
-Existing = 
-Map generation type = 
-Default = 
-Pangaea = 
-Perlin = 
-Continents = 
-Number of city-states = 
-One City Challenge = 
-No barbarians = 
-No ancient ruins = 
-No Natural Wonders = 
-Victory conditions = 
-Scientific = 
-Domination = 
-Cultural = 
+Promotions = プロモーション
+Barbarians = 蛮族
+Load copied data = コピーしたデータを読み込む
+Could not load game from clipboard! = クリップボードからゲームを読み込めませんでした！
+Start game! = ゲーム開始
+Map options = マップ設定
+Game options = ゲーム設定
+Map type = マップタイプ
+Generated = 生成
+Existing = 既存
+Map generation type = マップ生成タイプ
+Default = デフォルト
+Pangaea = パンゲア
+Perlin = 多島海
+Continents = 大陸
+Number of city-states = 都市国家の数
+One City Challenge = ワンシティチャレンジ
+No barbarians = 蛮族なし
+No ancient ruins = 古代遺跡なし
+No Natural Wonders = 自然遺産なし
+Victory conditions = 勝利条件
+Scientific = 科学
+Domination = 支配
+Cultural = 文化
 
-HIGHLY EXPERIMENTAL - YOU HAVE BEEN WARNED! = 
-Online Multiplayer = 
+HIGHLY EXPERIMENTAL - YOU HAVE BEEN WARNED! = 非常に実験的-警告を受けました！
+Online Multiplayer = オンラインマルチプレイヤー
 
-World size = 
-Tiny = 
-Small = 
-Medium = 
-Large = 
-Huge = 
+World size = マップサイズ
+Tiny = 極小
+Small = 小さい
+Medium = 普通
+Large = 大きい
+Huge = 広大
 
-Difficulty = 
-Settler = 
-Chieftain = 
-Warlord = 
-Prince = 
-King = 
-Emperor = 
-Immortal = 
-Deity = 
+Difficulty = 難易度
+Settler = 開拓者
+Chieftain = 酋長
+Warlord = 将軍
+Prince = 皇子
+King = 国王
+Emperor = 皇帝
+Immortal = 不死者
+Deity = 創造主
 
-AI = 
-Remove = 
-Random = 
-Human = 
-Hotseat = 
-User ID = 
-Click to copy = 
+AI = AI
+Remove = 消去
+Random = ランダム
+Human = 人間
+Hotseat = 電気椅子
+User ID = ユーザーID
+Click to copy = クリックしてコピー
 
 
-Game Speed = 
-Quick = 
-Standard = 
-Epic = 
-Marathon = 
+Game Speed = ゲーム速度
+Quick = クイック
+Standard = スタンダード
+Epic = エピック
+Marathon = マラソン
 
-Starting Era = 
-It looks like we can't make a map with the parameters you requested! = 
-Maybe you put too many players into too small a map? = 
-No human players selected! = 
+Starting Era = 始まりの時代
+It looks like we can't make a map with the parameters you requested! = リクエストしたパラメータを使用してマップを作成できないようです
+Maybe you put too many players into too small a map? = たぶん、多くのプレイヤーにはマップが小さすぎます
+No human players selected! = 人間のプレイヤーがいません！
 
 # Multiplayer
 
-Username = 
-Multiplayer = 
-Could not download game! = 
-Could not upload game! = 
-Join Game = 
-Invalid game ID! = 
-Copy User ID = 
-Copy Game ID = 
-Set current user = 
-Player ID from clipboard = 
-To create a multiplayer game, check the 'multiplayer' toggle in the New Game screen, and for each human player insert that player's user ID. = 
-You can assign your own user ID there easily, and other players can copy their user IDs here and send them to you for you to include them in the game. = 
-Once you've created your game, enter this screen again to copy the Game ID and send it to the other players. = 
-Players can enter your game by copying the game ID to the clipboard, and clicking on the Join Game button = 
+Username = ユーザーネーム
+Multiplayer = マルチプレイヤー
+Could not download game! = ゲームをダウンロードできませんでした！
+Could not upload game! = ゲームをアップロードできませんでした！
+Join Game = ゲームに参加
+Invalid game ID! = 無効なゲームID！
+Copy User ID = ユーザーIDをコピー
+Copy Game ID = ゲームIDをコピー
+Set current user = 現在のユーザーを設定
+Player ID from clipboard = クリップボードのプレーヤーID
+To create a multiplayer game, check the 'multiplayer' toggle in the New Game screen, and for each human player insert that player's user ID. = マルチプレイゲームを作成するには、「新しいゲーム」で「マルチプレイヤー」をオンにし、人間のプレイヤーごとにそのプレイヤーのユーザーIDを入れ込みます。
+You can assign your own user ID there easily, and other players can copy their user IDs here and send them to you for you to include them in the game. = 主催者は「新しいゲーム」に自分のユーザーIDを簡単に割り当てられます。他の参加するプレイヤーはここのユーザーIDをコピーして、主催者に送信してください。
+Once you've created your game, enter this screen again to copy the Game ID and send it to the other players. = ゲームを作成したら、この画面をもう一度戻ってゲームIDをコピーし、参加する他のプレーヤーに送信します。
+Players can enter your game by copying the game ID to the clipboard, and clicking on the Join Game button = 参加するプレイヤーはゲームIDをクリップボードにコピーし、「ゲームに参加」ボタンをクリックすることにより、ゲームに参加できます。
 
 # Save game menu
 
-Current saves = 
-Show autosaves = 
-Saved game name = 
-Copy to clipboard = 
-Copy saved game to clipboard = 
-Could not load game = 
-Load [saveFileName] = 
-Delete save = 
-Saved at = 
-Load map = 
-Are you sure you want to delete this map? = 
-Upload map = 
-Could not upload map! = 
-Map uploaded successfully! = 
-Saving... = 
+Current saves = 現在のセーブデータ
+Show autosaves = 自動保存データを表示
+Saved game name = セーブするゲームの名前
+Copy to clipboard = クリップボードにコピー
+Copy saved game to clipboard = セーブしたゲームをクリップボードにコピーします
+Could not load game = ゲームを読み込めませんでした
+Load [saveFileName] = [saveFileName]をロード
+Delete save = セーブデータを消す
+Saved at = に保存
+Load map = ロードマップ
+Are you sure you want to delete this map? = このマップを削除してもよろしいですか？
+Upload map = マップをアップロード
+Could not upload map! = マップをアップロードできませんでした！
+Map uploaded successfully! = マップをアップロードしました！
+Saving... = セーブ中
 
 # Options
 
@@ -649,13 +649,13 @@ Downloading... = ダウンロード中
 Could not download music! = 音楽をダウンロードできませんでした
 Show = 表示
 Hide = 非表示
-Show worked tiles = 動作するユニットを表示
-Show resources and improvements = リソースと改善点を表示
+Show worked tiles = 働くユニットを表示
+Show resources and improvements = 資源と改善を表示
 Check for idle units = 動作しないユニットを確認
 Move units with a single tap = シングルタップでユニットを移動
 Show tutorials = チュートリアルの表示
 Auto-assign city production = 都市生産の自動割り当て
-Auto-build roads = 道の自動構築
+Auto-build roads = 交易路の自動構築
 Show minimap = ミニマップを表示
 Show pixel units = ピクセル単位を表示
 Show pixel improvements = ピクセルの改善を表示
@@ -664,84 +664,84 @@ Fontset = フォントセット
 
 # Notifications
 
-Research of [technologyName] has completed! = 
-You have entered a golden age! = 
-[resourceName] revealed near [cityName] = 
-A [greatPerson] has been born in [cityName]! = 
-We have encountered [civName]! = 
-Cannot provide unit upkeep for [unitName] - unit has been disbanded! = 
-[cityName] has grown! = 
-[cityName] has been founded! = 
-[cityName] is starving! = 
-[construction] has been built in [cityName] = 
-[wonder] has been built in a faraway land = 
-Work has started on [construction] = 
-[cityName] cannot continue work on [construction] = 
-[cityname] has expanded its borders! = 
-Your Golden Age has ended. = 
-[cityName] has been razed to the ground! = 
-We have conquered the city of [cityname]! = 
-An enemy [unit] has attacked [cityname] = 
-An enemy [unit] has attacked our [ourUnit] = 
-Enemy city [cityName] has attacked our [ourUnit] = 
-An enemy [unit] has captured [cityname] = 
-An enemy [unit] has captured our [ourUnit] = 
-An enemy [unit] has destroyed our [ourUnit] = 
-An enemy [RangedUnit] has destroyed the defence of [cityname] = 
-Enemy city [cityName] has destroyed our [ourUnit] = 
-An enemy [unit] was destroyed while attacking [cityname] = 
-An enemy [unit] was destroyed while attacking our [ourUnit] = 
-Our [attackerName] was destroyed by an intercepting [interceptorName] = 
-Our [interceptorName] intercepted and destroyed an enemy [attackerName] = 
-Our [$attackerName] was attacked by an intercepting [$interceptorName] = 
-Our [$interceptorName] intercepted and attacked an enemy [$attackerName] = 
-An enemy [unit] was spotted near our territory = 
-An enemy [unit] was spotted in our territory = 
-[amount] enemy units were spotted near our territory = 
-[amount] enemy units were spotted in our territory = 
-The civilization of [civName] has been destroyed! = 
-The City-State of [name] has been destroyed! = 
-We have captured a barbarian encampment and recovered [goldAmount] gold! = 
-A barbarian [unitType] has joined us! = 
-We have found survivors in the ruins - population added to [cityName] = 
-We have discovered the lost technology of [techName] in the ruins! = 
-A [unitName] has joined us! = 
-An ancient tribe trains our [unitName] in their ways of combat! = 
-We have found a stash of [amount] gold in the ruins! = 
-We have found a crudely-drawn map in the ruins! = 
-[unit] finished exploring. = 
-[unit] has no work to do. = 
-You're losing control of [name]. = 
-You and [name] are no longer friends! = 
-Your alliance with [name] is faltering. = 
-You and [name] are no longer allies! = 
-[civName] gave us a [unitName] as gift near [cityName]! = 
-[civName] has denounced us! = 
-[cityName] has been connected to your capital! = 
-[cityName] has been disconnected from your capital! = 
-[civName] has accepted your trade request = 
-[civName] has denied your trade request = 
-[tradeOffer] from [otherCivName] has ended = 
-[tradeOffer] to [otherCivName] has ended = 
-One of our trades with [nation] has ended = 
-One of our trades with [nation] has been cut short = 
-[nation] agreed to stop settling cities near us! = 
-[nation] refused to stop settling cities near us! = 
-We have allied with [nation]. = 
-We have lost alliance with [nation]. = 
-We have discovered [naturalWonder]! = 
-We have received [goldAmount] Gold for discovering [naturalWonder] = 
-Your relationship with [cityStateName] is about to degrade = 
-Your relationship with [cityStateName] degraded = 
-A new barbarian encampment has spawned! = 
-Received [goldAmount] Gold for capturing [cityName] = 
-Our proposed trade request is no longer relevant! = 
+Research of [technologyName] has completed! = [technologyName]の研究が完了しました
+You have entered a golden age! = あなたは黄金時代に入りました
+[resourceName] revealed near [cityName] = [cityName]の近くに[resourceName]があらわれました
+A [greatPerson] has been born in [cityName]! = [cityName]に[greatPerson]が誕生しました
+We have encountered [civName]! = [civName]に遭遇しました
+Cannot provide unit upkeep for [unitName] - unit has been disbanded! = [unitName]に維持費を与えられません-ユニットは解散しました
+[cityName] has grown! = [cityName]が成長しました
+[cityName] has been founded! = [cityName]が建設されました
+[cityName] is starving! = [cityName]は飢えています
+[construction] has been built in [cityName] = [construction]が[cityName]に組み込まれました
+[wonder] has been built in a faraway land = [wonder]が遠くの地に建てられました
+Work has started on [construction] = [construction]の生産が開始されました
+[cityName] cannot continue work on [construction] = [cityName]は[construction]の生産を続行できません
+[cityname] has expanded its borders! = [cityname]は国境を広げました
+Your Golden Age has ended. = あなたの黄金時代は終わりました
+[cityName] has been razed to the ground! = [cityName]は地に破壊されました
+We have conquered the city of [cityname]! = [cityname]の都市を征服しました
+An enemy [unit] has attacked [cityname] = 敵の[unit]が[cityname]を攻撃しました
+An enemy [unit] has attacked our [ourUnit] = 敵の[unit]が[ourUnit]を攻撃しました
+Enemy city [cityName] has attacked our [ourUnit] = 敵の都市[cityName]が[ourUnit]を攻撃しました
+An enemy [unit] has captured [cityname] = 敵の[unit]が[cityname]を占領しました
+An enemy [unit] has captured our [ourUnit] = 敵の[unit]が[ourUnit]を捕獲しました
+An enemy [unit] has destroyed our [ourUnit] = 敵の[unit]が[ourUnit]を倒しました
+An enemy [RangedUnit] has destroyed the defence of [cityname] = 敵の[RangedUnit]が[cityname]の防御を破壊しました
+Enemy city [cityName] has destroyed our [ourUnit] = 敵の都市[cityName]が[ourUnit]を倒しました
+An enemy [unit] was destroyed while attacking [cityname] = [cityname]を攻撃中に敵の[unit]が倒されました
+An enemy [unit] was destroyed while attacking our [ourUnit] = 敵の[unit]が[ourUnit]を攻撃中に倒されました
+Our [attackerName] was destroyed by an intercepting [interceptorName] = [attackerName]は[interceptorName]に迎撃され倒されました
+Our [interceptorName] intercepted and destroyed an enemy [attackerName] = [interceptorName]が敵の[attackerName]を迎撃して倒しました
+Our [$attackerName] was attacked by an intercepting [$interceptorName] = [$attackerName]は[$interceptorName]に迎撃されました
+Our [$interceptorName] intercepted and attacked an enemy [$attackerName] = [$interceptorName]は敵の[$attackerName]を迎撃しました
+An enemy [unit] was spotted near our territory = 敵の[unit]が我々の領土の近くで発見されました
+An enemy [unit] was spotted in our territory = 敵の[unit]が我々の領土で発見されました
+[amount] enemy units were spotted near our territory = [amount] 敵のユニットが領土の近くで発見されました
+[amount] enemy units were spotted in our territory = [amount] 敵のユニットが私たちの領土で発見されました
+The civilization of [civName] has been destroyed! = [civName]の文明は破壊されました！
+The City-State of [name] has been destroyed! = [name]の都市国家は破壊されました
+We have captured a barbarian encampment and recovered [goldAmount] gold! = 蛮族の野営地を占領し、[goldAmount]ゴールドを回収しました
+A barbarian [unitType] has joined us! = 蛮族が[unitType]として参加しました
+We have found survivors in the ruins - population added to [cityName] = 遺跡で生存者が見つかりました-[cityName]に人口が追加されました
+We have discovered the lost technology of [techName] in the ruins! = 遺跡で[techName]の失われた技術を発見しました
+A [unitName] has joined us! = [unitName]が参加しました
+An ancient tribe trains our [unitName] in their ways of combat! = 古代の部族が私たちの[unitName]を訓練します！
+We have found a stash of [amount] gold in the ruins! = 遺跡の中に[amount]ゴールドの金の山が隠されているのを見つけました
+We have found a crudely-drawn map in the ruins! = 荒廃した地図が遺跡で見つかりました！
+[unit] finished exploring. = [unit] 探索を終了しました
+[unit] has no work to do. = [unit] する仕事がありません
+You're losing control of [name]. = [name]の制御を失いました
+You and [name] are no longer friends! = あなたと[name]はもう友好的ではありません
+Your alliance with [name] is faltering. = [name]との同盟関係は不安定です
+You and [name] are no longer allies! = あなたと[name]は同盟ではなくなりました
+[civName] gave us a [unitName] as gift near [cityName]! = [civName] [cityName]付近に[unitName]を寄付する
+[civName] has denounced us! = [civName]が我々を非難しました！
+[cityName] has been connected to your capital! = [cityName]は首都に繋がりました
+[cityName] has been disconnected from your capital! = [cityName]は首都から切断されました
+[civName] has accepted your trade request = [civName]は取引を受け入れました
+[civName] has denied your trade request = [civName]はあなたの取引を拒否しました
+[tradeOffer] from [otherCivName] has ended = [otherCivName]からの[tradeOffer]は終了しました
+[tradeOffer] to [otherCivName] has ended = [otherCivName]への[tradeOffer]は終了しました
+One of our trades with [nation] has ended = [nation]との取引の1つが終了しました
+One of our trades with [nation] has been cut short = [nation]との取引の1つが短縮されました
+[nation] agreed to stop settling cities near us! = [nation]は都市の近くに定住することをやめるのに同意しました
+[nation] refused to stop settling cities near us! = [nation]は都市の近くに定住することをやめるのに拒否しました
+We have allied with [nation]. = 私たちは[nation]と同盟を結びました
+We have lost alliance with [nation]. = [nation]との同盟関係を失いました
+We have discovered [naturalWonder]! = [naturalWonder]を発見しました
+We have received [goldAmount] Gold for discovering [naturalWonder] = [naturalWonder]を発見して[goldAmount]ゴールドを受け取りました
+Your relationship with [cityStateName] is about to degrade = [cityStateName]との関係は低下しつつあります
+Your relationship with [cityStateName] degraded = [cityStateName]との関係が低下しました
+A new barbarian encampment has spawned! = 新しい蛮族の野営地が生まれました
+Received [goldAmount] Gold for capturing [cityName] = [cityName]を獲得して[goldAmount] Goldを受け取りました
+Our proposed trade request is no longer relevant! = 提案された取引の申込みはもはや関係ありません
 
 # World Screen UI
 
-Working... = ロード中...
-Waiting for other players... = 他のプレイヤーを待っています...
-in = 
+Working... = ロード中…
+Waiting for other players... = 他のプレイヤーを待っています…
+in = 入る
 Next turn = 次のターン
 Turn = ターン
 turns = ターン
