--- a/android/assets/jsons/translationsByLanguage/Japanese.properties
+++ b/android/assets/jsons/translationsByLanguage/Japanese.properties
@@ -747,14 +747,14 @@ Turn = ターン
 turns = ターン
 turn = ターン
 Next unit = 次のユニット
-Pick a policy = 
+Pick a policy = 政策を選ぶ
 Movement = 移動
-Strength = 
-Ranged strength = 
-Bombard strength = 
-Range = 
+Strength = 力
+Ranged strength = 範囲力
+Bombard strength = 爆撃力
+Range = 範囲
 Move unit = 
-Stop movement = 
+Stop movement = 動きを止める
 Construct improvement = 
 Automate = 
 Stop automation = 
